fixes to portfolio

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               <a href="portfolio-details.html" title="More Details">
                 <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               </a>
-              <div class="portfolio-title">Wage Gap</div>
+              <div class="portfolio-title">Wage Gap Analysis</div>
             </div>
           </div>
 
