wage-gap updates

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Brynn Woolley</h1>
-      <p>Passionate about  <span class="typed" data-typed-items="Research, Sustainability, Data Science, Transportation, Bad Math Jokes, having fun"></span></p>
+      <p>Passionate about  <span class="typed" data-typed-items="research, sustainability, data science, transportation, bad math jokes, having fun"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -349,56 +349,63 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-research">
             <div class="portfolio-wrap">
-              <a href="portfolio-details.html" title="More Details">
-                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <!-- Anchor tag with portfolio-title class and the href attribute -->
+              <a class="portfolio-title" href="https://google.com" title="More Details">
+                IMT Optimization
               </a>
-              <div class="portfolio-title">IMT Optimization</div>
             </div>
           </div>
+          
         
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-research">
             <div class="portfolio-wrap">
-              <a href="portfolio-details.html" title="More Details">
-                <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <!-- Anchor tag with portfolio-title class and the href attribute -->
+              <a class="portfolio-title" href="https://google.com" title="More Details">
+                Smart Irrigation
               </a>
-              <div class="portfolio-title">Smart Irrigation</div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-research">
             <div class="portfolio-wrap">
-              <a href="portfolio-details.html" title="More Details">
-                <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <!-- Anchor tag with portfolio-title class and the href attribute -->
+              <a class="portfolio-title" href="https://google.com" title="More Details">
+                E-Scooter & Pavements
               </a>
-              <div class="portfolio-title">E-Scooter & Pavements</div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
             <div class="portfolio-wrap">
-              <a href="portfolio-details.html" title="More Details">
-                <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <!-- Anchor tag with portfolio-title class and the href attribute -->
+              <a class="portfolio-title" href="https://google.com" title="More Details">
+                Modeling Classical Conditioning
               </a>
-              <div class="portfolio-title">Modeling Pavlov</div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
             <div class="portfolio-wrap">
-              <a href="portfolio-details.html" title="More Details">
-                <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <!-- Anchor tag with portfolio-title class and the href attribute -->
+              <a class="portfolio-title" href="wage-gap.html" title="More Details">
+                Wage Gap Analysis
               </a>
-              <div class="portfolio-title">Wage Gap Analysis</div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
             <div class="portfolio-wrap">
-              <a href="portfolio-details.html" title="More Details">
-                <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <!-- Anchor tag with portfolio-title class and the href attribute -->
+              <a class="portfolio-title" href="https://google.com" title="More Details">
+                Holiday Delivery Routing
               </a>
-              <div class="portfolio-title">Holiday Delivery Routes</div>
             </div>
           </div>
 
