added empty project sites

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bi bi-map"></i><span>Experience</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class="bi bi-tools"></i> <span>Skills</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -351,7 +352,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
-              <a class="portfolio-title" href="https://google.com" title="More Details">
+              <a class="portfolio-title" href="imt-optimization.html" title="More Details">
                 IMT Optimization
               </a>
             </div>
@@ -363,7 +364,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
-              <a class="portfolio-title" href="https://google.com" title="More Details">
+              <a class="portfolio-title" href="smart-irrigation.html" title="More Details">
                 Smart Irrigation
               </a>
             </div>
@@ -373,7 +374,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
-              <a class="portfolio-title" href="https://google.com" title="More Details">
+              <a class="portfolio-title" href="escooters-pavement.html" title="More Details">
                 E-Scooter & Pavements
               </a>
             </div>
@@ -383,7 +384,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
-              <a class="portfolio-title" href="https://google.com" title="More Details">
+              <a class="portfolio-title" href="classical-conditioning.html" title="More Details">
                 Modeling Classical Conditioning
               </a>
             </div>
@@ -403,7 +404,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
-              <a class="portfolio-title" href="https://google.com" title="More Details">
+              <a class="portfolio-title" href="delivery-routing.html" title="More Details">
                 Holiday Delivery Routing
               </a>
             </div>
@@ -413,6 +414,16 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Contact</h2>
+          <p>To contact me please send me an email at bwool00@byu.edu or reach out to me via LinkedIn.</p>
+        </div>
+    </section><!-- End Contact Section -->
 
     
 
