--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-research">Research</li>
-              <li data-filter=".filter-projects">Projects</li>
+              <li data-filter=".filter-school">School Projects</li>
               <li data-filter=".filter-other">Other</li>
             </ul>
           </div>
@@ -380,7 +380,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
@@ -390,7 +390,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-school">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
@@ -400,12 +400,22 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
               <a class="portfolio-title" href="delivery-routing.html" title="More Details">
                 Holiday Delivery Routing
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <!-- Anchor tag with portfolio-title class and the href attribute -->
+              <a class="portfolio-title" href="delivery-routing.html" title="More Details">
+                Structural Engineering
               </a>
             </div>
           </div>
