--- a/index.html
+++ b/index.html
@@ -412,9 +412,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <!-- Anchor tag with portfolio-title class and the href attribute -->
-              <a class="portfolio-title" href="delivery-routing.html" title="More Details">
+              <a class="portfolio-title" href="structural-engineering.html" title="More Details">
                 Structural Engineering
               </a>
             </div>
