--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <p>I began at Brigham Young University as a civil engineering student. However, I soon realized that while sustainability 
             motivates me deeply, my interests increasingly gravitated toward mathematics and computer science. I aim to bring the 
             rigorous mathematical computation and data science skills I am learning in BYU's ACME program to the world of 
-            transportation engineering and technology to identify and solve the our world's biggest challenges.
+            transportation engineering and technology to identify and solve our world's biggest challenges.
           </p>
         </div>
 
