--- a/wage-gap.html
+++ b/wage-gap.html
@@ -89,7 +89,7 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
         <div class="row gy-4">
-          <h6>Modeling with Uncertainty and Data Project by: Brynn Woolley, Jane Housley, Jake Richards, & Spencer Chandler</h6>
+          <h6>Modeling with Uncertainty & Data Project by: Brynn Woolley, Jane Housley, Jake Richards, & Spencer Chandler</h6>
           <div class="col-lg-12">
             <article class="article-academic"> 
               <script src="https://gist.github.com/brynnwoolley/1d66b105f020569bee45902501e3b650.js"></script>          
