structural engineering page

--- a/structural-engineering.html
+++ b/structural-engineering.html
@@ -84,29 +84,165 @@
 
       </div>
     </section><!-- End Breadcrumbs -->
-
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
+
         <div class="row gy-4">
-          <div class="col-lg-12">
-            <article class="article-academic"> 
-              <!-- ======= 1 Introduction ======= -->
-              <h3>1 Introduction</h3>
-              <p> Coming Soon </p>
-              <!--  
-                    <pre class="code-snippet"><a href="https://gist.github.com/brynnwoolley/ab9f8c06c260200e07f861a1aec9ff12" target="_blank">job_bar_graph()</a></pre>
-                    <center><img src="assets/img/portfolio/wage-gap/job-bar-graph.png" class="img-fluid" alt=""></center>
-                    <h4>3.2 Education Analysis</h4>
-              -->
-              
-    
-              <!-- Add any additional sections or content as needed -->
-            </article>
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/arive-homes-1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/arive-homes-2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/arive-homes-3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/arive-homes-4.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/arive-homes-5.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/arive-homes-6.png" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <h3>Production Home Builds</h3>
+            <h5>Client: <a href="https://www.arivehomes.com/" target="_blank">Arive Homes</a>
+            </h5>
+            <div class="portfolio-description">
+              <p>
+                As a student structural engineer, I primarily designed structural components for production homes, with a significant amount of my work being for Arive Homes, a rapidly growing home builder in Utah. During my tenure at Acute, I engineered over 75 homes. My daily tasks included reviewing client drawings and creating structural plans with detailed annotations, material schedules, and comprehensive structural reports. While most of my interactions were through the client manager and the CEO of Arive Engineering, I occasionally communicated directly with clients and contractors, particularly for addressing on-site implementation issues that required innovative engineering solutions.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-1.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-2.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-3.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-4.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-5.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-6.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-7.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/park-city-8.webp" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <h3>Promontory Ridge</h3>
+            <h5>Location: Park City, Utah</h5>
+            <div class="portfolio-description">
+              <p>
+                I was part of a four-engineer team responsible for the structural design of a high-end residential project designed
+                by world-renowned architect Friedrich St. Florian. 
+                My main focus was on the roof and floor systems. I had to ensure the roof could handle significant snow loads, a 
+                challenging but vital aspect of the design. The floor system required precise detailing, especially for features like 
+                recessed shower floors and integration with the HVAC system. This project was both the most complex and the costliest 
+                I've worked on, pushing my engineering skills, particularly in practical problem-solving and design integration.
+
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/stonecross-1.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/stonecross-2.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/stonecross-3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/structural-eng/stonecross-4.png" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <h3>Stonecrossing</h3>
+            <h5>Location: Provo, Utah</h5>
+            <div class="portfolio-description">
+              <p>
+                This custom build was one of my first solo engineering projects, presenting unique challenges due to the limited number of bearing walls. The second story's design demanded a complex beam system to support the majority of the floor. This project was a refreshing change from my usual work on production homes, and it reinforced my passion for devising creative solutions to complex structural problems.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </section><!-- End Portfolio Details Section -->
+
 
   </main><!-- End #main -->
 
