changes to portfolio & skills

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bxl-python"></i></div>
             <h4 class="title"><a href="">Python</a></h4>
-            <p class="description">NumPy, SciPy, SymPy, Matplotlib, Seaborn, Scikit-Learn, Pandas,
+            <p class="description">NumPy, SciPy, SymPy, PySpark, Matplotlib, Seaborn, Scikit-Learn, Pandas,
               Geopandas, Shapely, Folium</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -331,7 +331,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio (Under construction)</h2>
+          <h2>Portfolio</h2>
           <p>Exploring innovative solutions and strategic research, this portfolio showcases a range of projects that emphasize smart logistics, technology integration, and social impact. From improving transportation efficiency with intelligent systems to addressing societal issues such as the wage gap, each project reflects a commitment to excellence and a forward-thinking approach.</p>
         </div>
 
@@ -359,16 +359,19 @@
           </div>
           
         
-
+          <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-research">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              -->
               <!-- Anchor tag with portfolio-title class and the href attribute -->
+               <!--
               <a class="portfolio-title" href="smart-irrigation.html" title="More Details">
                 Smart Irrigation
               </a>
             </div>
           </div>
+          -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-research">
             <div class="portfolio-wrap">
